Fixed plus button page spacing

--- a/src/style/userTable.css
+++ b/src/style/userTable.css
@@ -51,6 +51,7 @@ td {
 }
 
 .mb-4.mt-2{
+  padding-left: 27px;
   color: green;
 }
 
